# horde-model-reference

./: .CONTRIBUTING.md  .dockerignore  .env.example  .env.primary  .env.primary.example  .env.sync.example  .git-blame-ignore-revs  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  MANIFEST.in  README.md  SYNC_README.md  create_example_json.py  docker-compose.redis.yml  docker-compose.sync.example.yml  docker-compose.yml  get_all_names.py  legacy_stable_diffusion.schema.json  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.txt  stable_diffusion.example.json  stable_diffusion.ref.schema.json  stable_diffusion.schema.json  test.json  test_endpoint.py  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql.yml  docker-publish.yml  docker-validation.yml  docs.yml  lint.yml  maintests.yml  prtests.yml  r2_sync.yml  release.yml
docs/: .pages  build_docs.py  index.md  legacy_csv_conversion.md  model_reference_backend.md  onboarding.md  primary_deployments.md  replica_backend_base.md
docs/concepts/: .pages  analytics_pipeline.md  architecture_overview.md  canonical_format.md  design_decisions.md  gated_r2_mirror.md  http_service.md  integrations.md  request_lifecycle.md  sync_system.md
docs/guides/: .pages  consume_the_http_api.md  filter_models_for_a_worker.md  installation.md  mirror_models_to_r2.md  offline_and_resilient_reads.md  submit_models_via_the_api.md  write_a_live_provider.md
docs/horde_model_reference/: .pages  _version.md  diff_service.md  http_retry.md  meta_consts.md  model_kind_validation.md  model_reference_manager.md  model_reference_metadata.md  model_reference_records.md  path_consts.md  query.md  query_fields.md  registries.md  source_consts.md  text_backend_names.md  text_model_duplicates.md  text_model_write_processor.md  util.md
docs/reference/: .pages  api_deployments.md  audit_trail.md  glossary.md  legacy_csv_conversion.md  model_providers.md  model_reference_backend.md  model_reference_records.md  pending_queue.md  primary_deployments.md  replica_backend_base.md
docs/stylesheets/: extra.css
docs/tutorials/: .pages  configuration_and_troubleshooting.md  getting_started.md  querying_models.md  registering_providers.md  using_the_http_api.md  working_with_records.md
examples/: 01_quickstart.py  02_query_recipes.py  03_working_with_records.py  04_register_provider.py  README.md  scenario_1_model_browser.py  scenario_2_worker_integration.py  scenario_3_model_downloader.py  scenario_4_capability_checker.py  scenario_5_type_safe_config.py  scenario_6_multi_category.py  scenario_logging_control.py
horde_model_reference/: __init__.py  blip.json  clip.json  codeformer.json  consts.py  controlnet.json  esrgan.json  gfpgan.json  meta_consts.py  model_database_records.py  model_reference_manager.py  model_reference_records.py  path_consts.py  safety_checker.json  stable_diffusion.json  stable_diffusion_models.json  test.json  util.py
horde_model_reference/legacy/: README.md  __init__.py  add_to_legacy_sd.py  blip.json  clip.json  codeformer.json  controlnet.json  convert_all_legacy_dbs.py  convert_legacy.py  download_live_legacy_dbs.py  esrgan.json  get_all_filesizes.py  legacy_download_manager.py  legacy_format.py  legacy_model_database_records.py  safety_checker.json  stable_diffusion.json  temp_add_to_legacy_sd.py  temp_sd_model_database_records.py  validate_sd.py
schemas/: stable_diffusion.example.json  stable_diffusion.schema.json
scripts/: README.md  __init__.py  apply_backfill_report.py  create_example_json.py  get_all_names.py  hash_components.py  seed_annotator_reference.py  verify_query_fields.py
scripts/legacy_text/: __init__.py  convert.py  defaults.json  generation_params.json  reverse_convert.py
scripts/r2_sync/: __init__.py  allowlist.py  annotators.py  byte_source.py  object_store.py  planner.py  redistributable_allowlist.json  sync.py
scripts/sync/: README.md  __init__.py  github_app_auth_example.md  sync_github_references.py
src/horde_model_reference/: __init__.py  annotator_catalog.py  annotator_records.py  canonical_components.py  component_hash.py  component_identity.py  diff_service.py  download_engine.py  group_aliases.py  group_families.py  group_schema_store.py  http_retry.py  logging_config.py  meta_consts.py  model_kind_validation.py  model_reference_manager.py  model_reference_metadata.py  model_reference_records.py  on_disk_layout.py  path_consts.py  query.py  query_fields.py  registries.py  source_consts.py  text_backend_names.py  text_model_duplicates.py  text_model_write_processor.py  util.py
tests/: README.md  __init__.py  check_model_ref_type_blocks.py  conftest.py  create_env_file_example.py  create_example_json.py  helpers.py  test_annotator_catalog.py  test_annotator_records.py  test_audit_analysis.py  test_audit_replay.py  test_audit_trail.py  test_broken_tutu_grouping.py  test_canonical_components.py  test_canonical_format.py  test_combined_model_statistics.py  test_component_hash.py  test_component_identity.py  test_component_slice.py  test_consts.py  test_convert_legacy_database.py  test_converters.py  test_csv_rows_to_legacy_dict.py  test_data_merger.py  test_download_engine.py  test_env_example.py  test_examples.py  test_hash_components_pass.py  test_hash_components_script.py  test_hash_components_submit.py  test_http_backend.py  test_indexed_horde_types.py  test_legacy_records.py  test_metadata.py  test_migrate_layout.py  test_model_database.py  test_model_kind_validation.py  test_model_providers.py  test_model_reference_manager.py  test_on_disk_layout.py  (+24 more)
tests/backends/: __init__.py  test_backends_init.py  test_http_backend.py  test_local_readonly_backend.py  test_primary_mode.py  test_redis_backend.py
tests/horde_api/: __init__.py  conftest.py  test_audit_analysis_live.py  test_audit_worker_count.py  test_data_merger.py  test_deletion_risk_analysis_live.py  test_deletion_risk_worker_count.py  test_horde_api_integration.py  test_horde_api_integration_live.py
tests/integrations/: test_stats_aggregation.py
(+244 files in other folders)
