[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "horde_model_reference"
description = "A helper library providing a way to work with the lists of diffusion models, utility models, and any other related files required for AI-Horde."
authors = [
    {name = "tazlin", email = "tazlin.on.github@gmail.com"},
    {name = "db0", email = "mail@dbzer0.com"},
    {name = "Jug", email = "jugdev@proton.me"},
]
readme = "README.md"
requires-python = ">=3.10"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dynamic=["version"] # , "dependencies"]
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "strenum>=0.4.15",
    "typing-extensions>=4.12.2",
]

#[tool.setuptools.dynamic]
# dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/Haidra-Org/horde-model-reference"

[project.scripts]
validate-sd-models = "horde_model_reference.legacy.validate_sd:main"
download-sd-models = "horde_model_reference.legacy.download_live_legacy_dbs:main"

[tool.setuptools_scm]
version_file = "src/horde_model_reference/_version.py"

# [tool.setuptools.package-dir]
# horde_model_reference = "src/horde_model_reference"

# [tool.setuptools.packages.find]
# include = ["horde_model_reference*", "horde_model_reference.*"]
# exclude = ["horde_model_reference.showcase*", "horde_model_reference.tests*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.webp", "*.png", "*.jpg", "*.ckpt", "*.pt", "*.safetensors"]

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore=["TRY003"]
select = [
    "A",    # flake8-builtins
    "I",    # isort
    # "S",    # Bandit
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "YTT",  # flake8-2020
    # "BLE",    # flake8-blind-except
    "B",    # flake8-bugbear
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    # "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    # "T20",  # flake8-print
    "UP",   # pyupgrade
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "TRY",  # tryceratops
    "RUF100"
]
[dependency-groups]
dev = [
    "babel>=2.17.0",
    "black==24.10.0",
    "build>=0.10.0",
    "coverage>=7.2.7",
    "lxml-stubs>=0.5.1",
    "mypy==1.13.0",
    "pandas-stubs>=2.2.3.250308",
    "pre-commit~=4.0.1",
    "pytest==8.3.3",
    "pytest-cov>=6.0.0",
    "ruff==0.8.0",
    "tox~=4.23.2",
    "types-openpyxl>=3.1.5.20250306",
    "types-pygments>=2.19.0.20250305",
    "types-pywin32>=308.0.0.20250128",
    "types-requests>=2.32.0.20250306",
    "types-tabulate>=0.9.0.20241207",
]
