[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "horde_model_reference"
description = "A helper library providing a way to work with the lists of generation models, utility models, and any other related files required for the AI-Horde ecosystem."
authors = [
    {name = "tazlin", email = "tazlin.on.github@gmail.com"},
    {name = "db0", email = "mail@dbzer0.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dynamic=["version"] # , "dependencies"]
dependencies = [
    "aiofiles>=25.1.0",
    "cachetools>=6.1.0",
    "haidra-core>=0.0.1",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.1",
    "redis[hiredis]>=5.0.0",
    "requests>=2.32.3",
    "strenum>=0.4.15",
    "typing-extensions>=4.12.2",
    "ujson>=5.11.0",
]

[project.urls]
"Homepage" = "https://github.com/Haidra-Org/horde-model-reference"

[project.scripts]
validate-sd-models = "horde_model_reference.legacy.validate_sd:main"
download-sd-models = "horde_model_reference.legacy.download_live_legacy_dbs:main"

[project.optional-dependencies]
service = [
    "fastapi[standard]>=0.116.1",
]
sync = [
    "PyGithub>=2.5.0",
    "gitpython>=3.1.0",
]

[tool.setuptools_scm]
version_file = "src/horde_model_reference/_version.py"

# [tool.setuptools.package-dir]
# horde_model_reference = "src/horde_model_reference"

# [tool.setuptools.packages.find]
# include = ["horde_model_reference*", "horde_model_reference.*"]
# exclude = ["horde_model_reference.showcase*", "horde_model_reference.tests*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.webp", "*.png", "*.jpg", "*.ckpt", "*.pt", "*.safetensors"]

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
  "A",     # flake8-builtins
  "I",     # isort
  "E",     # pyflakes
  "W",     # pycodestyle warnings
  "F",     # flake8
  "UP",    # pyupgrade
  "YTT",   # flake8-2020
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "PIE",   # flake8-pie
  "RET",   # flake8-return
  "SIM",   # flake8-simplify
  "COM",   # flake8-commas
  "D",     # flake8-docstrings
  "D417",  # Missing argument descriptions in the docstring
  "ANN",   # flake8-annotations
  "RUF",   # ruff specific rules
  "ASYNC", # flake8-async
  ]
ignore = [
  "D105",    # Missing docstring in magic method
  "D100",    # Missing docstring in public module

  "COM812",  # Missing comma in list, handled automatically by `ruff format`

  # Ignore D rules for non-google docstring standard
  "D203",    # 1 blank line required before class docstring
  "D204",    # 1 blank line required after class docstring
  "D213",    # Multi-line docstring summary should start at the second line
  "D215",    # Section underline is over-indented
  "D400",    # First line should end with a period
  "D404",    # First word of the docstring should not be This
  "D406",    # Section name should end with a newline
  "D407",    # Missing dashed underline after section
  "D408",    # Section underline should be in the line following the section's name
  "D409",    # Section underline should match the length of its name
  "D413",]   # Missing blank line after last section


[dependency-groups]
dev = [
    "babel>=2.17.0",
    "black==24.10.0",
    "build>=0.10.0",
    "coverage>=7.2.7",
    "fakeredis>=2.21.0",
    "lxml-stubs>=0.5.1",
    "mypy==1.13.0",
    "pandas-stubs>=2.2.3.250308",
    "pre-commit~=4.0.1",
    "pytest==8.3.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
    "ruff==0.8.0",
    "settings-doc>=4.3.2",
    "tox~=4.23.2",
    "types-aiofiles>=24.1.0.20250822",
    "types-cachetools>=6.1.0.20250717",
    "types-openpyxl>=3.1.5.20250306",
    "types-pygments>=2.19.0.20250305",
    "types-pywin32>=308.0.0.20250128",
    "types-redis>=4.6.0",
    "types-requests>=2.32.0.20250306",
    "types-tabulate>=0.9.0.20241207",
]
sync-dev = [
    "PyGithub>=2.5.0",
    "gitpython>=3.1.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.18",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.18.0",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
strict = true
disallow_untyped_defs = true
warn_unused_configs = true
exclude = [
  '^codegen',
  '\.git',
  '\.hg',
  '\.mypy_cache',
  '\.ruff_cache',
  '\.tox',
  '\.venv',
  '\.venv.*',
  '__pycache__',
  '_build',
  'buck-out',
  'build',
  'codegen',
  'dist',
  'docs',
]

[[tool.mypy.overrides]]
module = ["settings_doc.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
markers = [
    "integration: marks tests as integration tests (requires live PRIMARY instance)",
]
